wip: fix unit tests and enable description collapse and expand

--- a/src/styles/pages/_organization-create.scss
+++ b/src/styles/pages/_organization-create.scss
@@ -43,4 +43,12 @@
   .fa-plus-circle:hover{
     cursor: pointer;
   }
+
+  .org-create-expand-link{
+    text-decoration: underline;
+  }
+
+  .org-create-expand-link:hover{
+    cursor: pointer;
+  }
 }
