--- a/src/styles/pages/_organization-detail.scss
+++ b/src/styles/pages/_organization-detail.scss
@@ -30,4 +30,12 @@
     bottom: 0;
     opacity: 0;
   }
+
+  .org-detail-expand-link{
+    text-decoration: underline;
+  }
+
+  .org-detail-expand-link:hover{
+    cursor: pointer;
+  }
 }
